# pv

./: .gitignore  Makefile.am  README.md  configure.ac
doc/: ACKNOWLEDGEMENTS.md  DEVELOPERS.md  NEWS.md  TODO.md  VERSION  pv.1  pv.1.md  quickref.1.in  release-checklist
docs/: .#pv.1  ACKNOWLEDGEMENTS.md  DEVELOPERS.md  NEWS.md  TODO.md  build-package.sh  pv.1  pv.1.md  release.sh  test-on-vm-lab.sh
po/: .gitignore  LINGUAS  POTFILES.in  cs.po  de.po  es.po  fi.po  fr.po  ka.po  pl.po  pt.po  ru.po  tr.po
src/include/: config-aux.h  config.h.in  options.h  pv-internal.h  pv.h
src/main/: debug.c  help.c  main.c  options.c  remote.c  version.c
src/pv/: calc.c  cursor.c  display.c  elapsedtime.c  file.c  loop.c  number.c  proctitle.c  remote.c  signal.c  state.c  string.c  transfer.c  watchpid.c
src/pv/format/: averagerate.c  barstyle.c  bufferpercent.c  bytes.c  eta.c  fineta.c  lastwritten.c  name.c  previousline.c  progressbar.c  rate.c  ratio.c  sgr.c  timer.c
tests/: Bug_-_Display_length_at_magnitude_boundary_-_Bytes.test  Bug_-_Display_length_at_magnitude_boundary_-_Rate.test  Bug_-_Install_all_files.test  Display_-_--average-rate.test  Display_-_--bits.test  Display_-_--buffer-percent.test  Display_-_--bytes.test  Display_-_--eta_-_plausible_values.test  Display_-_--fineta_-_plausible_values.test  Display_-_--last-written.test  Display_-_--numeric.test  Display_-_--numeric_--bytes.test  Display_-_--numeric_--bytes_--line-mode.test  Display_-_--numeric_--timer.test  Display_-_--progress_-_basic_movement.test  Display_-_--progress_-_increasing.test  Display_-_--quiet.test  Display_-_--rate_-_displayed_value_changes.test  Display_-_--timer_-_displayed_value_changes.test  General_-_--pidfile.test  General_-_--size_argument_handling.test  Integrity_-_Basic.test  Integrity_-_Binary_data.test  Integrity_-_From_bursty_source.test  Integrity_-_Large_file_support.test  Integrity_-_On_output_pipe_close.test  Integrity_-_When_adjusted_remotely.test  Memory_safety_-_Basic.test  Memory_safety_-_Process_title.test  Memory_safety_-_Remote_control_receiver.test  Memory_safety_-_Remote_control_sender.test  Memory_safety_-_Watchfd.test  Modifiers_-_--direct-io.test  Modifiers_-_--force.test  Modifiers_-_--interval.test  Modifiers_-_--line-mode.test  Modifiers_-_--size.test  Modifiers_-_--size_from_dir_size.test  Modifiers_-_--size_from_file_size.test  Modifiers_-_--sync.test  (+11 more)
